# f3d-superbuild

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  README.md  versions.cmake  yo
.github/actions/android/: action.yml
.github/actions/f3d-superbuild/: action.yml
.github/actions/wheels/: action.yml  build_f3d_superbuild.sh  copy_mesa.sh  test_utils.py  test_with_pytest_retry.sh
.github/scripts/: before_all.sh
.github/workflows/: ci.yml  nightly.yml  release.yml  wheels.yml
projects/: alembic.cmake  assimp.cmake  draco.cmake  embree.cmake  f3d.bundle.common.cmake  f3d.cmake  f3d.info.cmake  f3d.suffix.cmake  f3dhdf.cmake  imath.cmake  imgui.cmake  ispc.cmake  occt.cmake  openexr.cmake  openimagedenoise.cmake  openjph.cmake  openusd.cmake  openvdb.cmake  openvkl.cmake  ospray.cmake  ospraymaterials.cmake  pdal.cmake  pybind11.cmake  rkcommon.cmake  szip.cmake  vtk.cmake  webifc.cmake  webp.cmake  zlib.cmake  zstd.cmake
projects/apple/: f3d-appname.cmake  f3d.bundle.cmake  proj.cmake
projects/apple/files/: f3d-dmg-background.tif  f3d-dmg-setup.scpt.in  hdiutil_repeat.sh
projects/apple/patches/: proj-fix-database-location.patch
projects/patches/: alembic-disable-macosx-rpath.patch  assimp-remove-debug-flags-windows.patch  draco-fix-signed-unsigned-mismatch-warning-in-decoder_buff.patch  embree-3.13.1-fix-output-operators.patch  f3d-add-origin-loader-rpath.patch  imath-disable-macosx-rpath.patch  imgui-cmake-build.patch  occt-fix-libraries-link-order-coloring.patch  occt-fix-libraries-link-order.patch  occt-remove-cout-brep.patch  occt-remove-delete-fix-segfault.patch  openusd-install-bin.patch  openusd-msvc-defaults.patch  openvdb-decrease-gcc-min-ver.patch  openvdb-fix-visible-dependencies-link.patch  openvdb-remove-lib-prefix-static.patch  openvdb-remove-not-needed-cmake-modules.patch  openvkl-install-rpath.patch  pdal-add-static-build-support.patch  pdal-fix-include-filesystem.patch  pdal-fix-sqlite3-configuration.patch  rkcommon-1.7.0-force-no-simd.patch  rkcommon-force-no-simd.patch  szip-remove_compression_license.patch  vtk-fix-static-build.patch  vtk-remove-vasprintf.patch  vtk-revert-weak-ptr-static.patch  webifc-remove-std-format.patch
projects/unix/: egl.cmake  egl.system.cmake  f3d.bundle.cmake  osmesa.cmake  osmesa.system.cmake
projects/win32/: f3d.bundle.cmake
projects/win32/NSIS/: NSIS.InstallOptions.ini.in
testing/: CMakeLists.txt
testing/data/: DATA_LICENSES.md
testing/scripts/: f3d.test.sdk.cmake
testing/sdk/test_engine/: CMakeLists.txt  main.cxx
testing/sdk/test_external/: CMakeLists.txt  main.cxx
testing/sdk/test_rendering/: CMakeLists.txt  main.cxx
testing/test_sdk/: CMakeLists.txt
